manifests/matrix-meetup/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: matrix-route
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`matrix.meetup.mu`)
#     services:
#     - name: matrix-conduit
#       port: 6167
#   tls:
#     certResolver: le


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gts
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - matrix.meetup.mu
    secretName: matrix-meeup-tls
  rules:
  - host: matrix.meetup.mu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: matrix-conduit
            port:
              number: 6167
